<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:orientation="vertical"
    android:layout_height="200dp" android:background="@color/white">

    <LinearLayout android:layout_gravity="center"
        android:layout_width="match_parent" android:id="@+id/score_container"
        android:layout_height="wrap_content" android:orientation="vertical" >
    <RelativeLayout android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"  android:layout_marginTop="10dp"
         >

        <TextView
            android:id="@+id/team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:text="@string/team"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/opponent_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            android:text="@string/opponent"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>
    <RelativeLayout android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="60dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" >

        <TextView
            android:id="@+id/home_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" android:textColor="@color/black"
            android:text="@string/score" android:textStyle="bold"
            android:textSize="32sp"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/team_logo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/logo"></ImageView>

            <ImageView
                android:id="@+id/card_link"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="6dp"
                android:clickable="true"
                android:src="@drawable/ic_launcher_foreground"></ImageView>

            <ImageView
                android:id="@+id/opponent_logo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/logo"></ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content" android:layout_centerVertical="true"
            android:layout_height="wrap_content" android:id="@+id/away_score"
            android:text="@string/score" android:textStyle="bold" android:textColor="@color/black"
            android:textSize="32sp" android:layout_alignParentRight="true"></TextView>

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

            <TextView
                android:id="@+id/season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/season"
                android:textSize="14sp"></TextView>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/season" android:gravity="top"
                android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:text="@string/tv"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/bye"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/bye"
        android:textAllCaps="true"
        android:textColor="@color/grey"
        android:textSize="40sp"
        android:visibility="gone" />

</LinearLayout>
